--- a/web/Views/qch/Index.cshtml
+++ b/web/Views/qch/Index.cshtml
@@ -31,7 +31,7 @@
     <!--row2-->
     <div class="row2">
         <div class="box">
-            <img src="/Content/image/logo2.png" alt="">
+            <img src="/Content/image/index/qchlogo.png" alt="">
             <h1>About-青创汇是致力于青年创业的一站式双创资源服务云平台</h1>
             <p>布局全国300余家线下体验中心，拥有超过100名创业实战导师，1000家投资机构青创汇颠覆性开发国内首款创业移动软件， </p>
             <p>将创业资源整合融入APP实现线上APP结合线下体验中心的移动创业梦想。</p>
@@ -84,44 +84,64 @@
         <h4>COOPERATIVE&nbsp;UNIT</h4>
         <div class='box'>
             <div class="company first">
-                <img src="/Content/image/1 1.png" alt="">
-                <img src="/Content/image/1 2.png" alt="" style="display: none">
+                <img src="/Content/image/company1a.jpg" alt="">
+                <img src="/Content/image/company1b.jpg" alt="" style="display: none">
             </div>
             <div class="company">
-                <img src="/Content/image/2 1.png" alt="">
-                <img src="/Content/image/2 2.png" alt="" style="display: none">
+                <img src="/Content/image/company2a.jpg" alt="">
+                <img src="/Content/image/company2b.jpg" alt="" style="display: none">
             </div>
             <div class="company">
-                <img src="/Content/image/3 1.png" alt="">
-                <img src="/Content/image/3 2.png" alt="" style="display: none">
+                <img src="/Content/image/company3a.jpg" alt="">
+                <img src="/Content/image/company3b.jpg" alt="" style="display: none">
             </div>
             <div class="company">
-                <img src="/Content/image/4 1.png" alt="">
-                <img src="/Content/image/4 2.png" alt="" style="display: none">
+                <img src="/Content/image/company4a.jpg" alt="">
+                <img src="/Content/image/company4b.jpg" alt="" style="display: none">
             </div>
             <div class="company two">
-                <img src="/Content/image/5 1.png" alt="">
-                <img src="/Content/image/5 2.png" alt="" style="display: none">
+                <img src="/Content/image/company5a.jpg" alt="">
+                <img src="/Content/image/company5b.jpg" alt="" style="display: none">
             </div>
             <div class="company first">
-                <img src="/Content/image/6 1.png" alt="">
-                <img src="/Content/image/6 2.png" alt="" style="display: none">
+                <img src="/Content/image/company6a.jpg" alt="">
+                <img src="/Content/image/company6b.jpg" alt="" style="display: none">
             </div>
             <div class="company">
-                <img src="/Content/image/1 1.png" alt="">
-                <img src="/Content/image/1 2.png" alt="" style="display: none">
+                <img src="/Content/image/company7a.jpg" alt="">
+                <img src="/Content/image/company7b.jpg" alt="" style="display: none">
             </div>
             <div class="company">
-                <img src="/Content/image/2 1.png" alt="">
-                <img src="/Content/image/2 2.png" alt="" style="display: none">
+                <img src="/Content/image/company8a.jpg" alt="">
+                <img src="/Content/image/company8b.jpg" alt="" style="display: none">
             </div>
             <div class="company">
-                <img src="/Content/image/3 1.png" alt="">
-                <img src="/Content/image/3 2.png" alt="" style="display: none">
+                <img src="/Content/image/company9a.jpg" alt="">
+                <img src="/Content/image/company9b.jpg" alt="" style="display: none">
             </div>
             <div class="company two">
-                <img src="/Content/image/4 1.png" alt="">
-                <img src="/Content/image/4 2.png" alt="" style="display: none">
+                <img src="/Content/image/company10a.jpg" alt="">
+                <img src="/Content/image/company10b.jpg" alt="" style="display: none">
+            </div>
+            <div class="company first">
+                <img src="/Content/image/company11a.jpg" alt="">
+                <img src="/Content/image/company11b.jpg" alt="" style="display: none">
+            </div>
+            <div class="company">
+                <img src="/Content/image/company12a.jpg" alt="">
+                <img src="/Content/image/company12b.jpg" alt="" style="display: none">
+            </div>
+            <div class="company">
+                <img src="/Content/image/company13a.jpg" alt="">
+                <img src="/Content/image/company13b.jpg" alt="" style="display: none">
+            </div>
+            <div class="company">
+                <img src="/Content/image/company14a.jpg" alt="">
+                <img src="/Content/image/company14b.jpg" alt="" style="display: none">
+            </div>
+            <div class="company two">
+                <img src="/Content/image/company15a.jpg" alt="">
+                <img src="/Content/image/company15b.jpg" alt="" style="display: none">
             </div>
         </div>
     </div>
