--- a/web/Views/qch/Partners.cshtml
+++ b/web/Views/qch/Partners.cshtml
@@ -89,7 +89,7 @@
                     }
                 },
                 pageUrl: function (type, page, current) {                  
-                    return "/Place/Index?page=" + page ;
+                    return "/qch/partners?page=" + page ;
                 }
             }
             element.bootstrapPaginator(options);
