--- a/web/Views/qch/uc.cshtml
+++ b/web/Views/qch/uc.cshtml
@@ -9,13 +9,13 @@
         <p><span></span>&nbsp;&nbsp;@qch.core.StyleService.GetPosition(ViewBag.UserPosition)</p>
     </div>
     <div class="time">
-        上次登陆时间：<span>@DateTime.Now.ToShortDateString()&nbsp;&nbsp;@DateTime.Now.ToShortTimeString()</span>
+        系统当前时间：<span>@DateTime.Now.ToShortDateString()&nbsp;&nbsp;@DateTime.Now.ToShortTimeString()</span>
     </div>
 
 </div>
 <div class="left">
     <ul>
-        <a href="javascript:void(0)">
+        <a href="/qch/usercenter">
             <li class="active1" id="userInfo"><span></span>
                 <img src="/Content/image/gerenxinxi.png">个人信息</li>
         </a>
